# identicon

./: Cargo.toml  README.md
src/: hsl.rs  lib.rs  main.rs  nibbler.rs
